--- a/views/page/admin/list-akun.ejs
+++ b/views/page/admin/list-akun.ejs
@@ -44,12 +44,19 @@
 
         aside.sidebar {
             width: 20%;
-            padding: 10px;
+            padding: 10px 0;
         }
 
         .sidebar a {
             color: #333;
             text-decoration: none;
+        }
+
+        .content .sidebar{
+            width: 30%;
+        }
+        .container .kosong{
+            width: 30%;
         }
 
         .button-container {
@@ -60,12 +67,14 @@
         }
 
         .button-container button {
-            padding: 10px 20px;
+            padding: 10px 60px;
             border: none;
             background-color: rgb(235, 243, 232);
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s;
+            font-size: 16pt;
+            font-weight: bold;
         }
 
         .button-container button.active,
@@ -77,10 +86,9 @@
         .user-list {
             flex: 1;
             overflow-y: auto;
-            padding: 20px 0;
+            padding: 0;
             border: none;
-            margin-bottom: 10px;
-            height: 290px;
+            height: 78vh;
         }
 
         .user-list::-webkit-scrollbar {
@@ -104,7 +112,7 @@
         }
 
         .user-list li {
-            width: 60%;
+            width: 95%;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -135,40 +143,45 @@
             </a>
         </div>
     </div>
-    <div class="container">
-        <h2>List Akun</h2>
-        <div class="content">
-            <aside class="sidebar">
-                <form action="/fetch-users" method="post">
-                    <div class="button-container">
-                        <button type="submit" name="userType" value="kurir">Kurir</button>
-                        <button type="submit" name="userType" value="agen">Agen</button>
-                        <button type="submit" name="userType" value="karyawan">Karyawan Gudang</button>
+    <div class="main">
+        <div class="container">
+            <h2>List Akun</h2>
+            <div class="content">
+                <aside class="sidebar">
+                    <form action="/fetch-users" method="post">
+                        <div class="button-container">
+                            <button type="submit" name="userType" value="kurir">Kurir</button>
+                            <button type="submit" name="userType" value="agen">Agen</button>
+                            <button type="submit" name="userType" value="karyawan">Karyawan Gudang</button>
+                        </div>
+                    </form>
+                </aside>
+                <div class="line-center"></div>
+                <% if (typeof users !=='undefined' && users.length> 0) { %>
+                    <div class="user-list">
+                        <ul>
+                            <% users.forEach(function(user) { %>
+                                <li>
+                                    <span><i class="fas fa-user"></i>
+                                        <%= user.nama || user.email %>
+                                    </span>
+                                    <form action="/delete-user/<%= userType === 'kurir' ? user.id_kurir : user.id %>"
+                                        method="post">
+                                        <input type="hidden" name="userType" value="<%= userType %>">
+                                        <button type="submit"><i class="fas fa-trash-alt"></i></button>
+                                    </form>
+                                </li>
+                                <% }); %>
+                        </ul>
                     </div>
-                </form>
-            </aside>
-            <div class="line-center"></div>
-            <% if (typeof users !=='undefined' && users.length> 0) { %>
-                <div class="user-list">
-                    <ul>
-                        <% users.forEach(function(user) { %>
-                            <li>
-                                <span><i class="fas fa-user"></i>
-                                    <%= user.nama || user.email %>
-                                </span>
-                                <form action="/delete-user/<%= userType === 'kurir' ? user.id_kurir : user.id %>"
-                                    method="post">
-                                    <input type="hidden" name="userType" value="<%= userType %>">
-                                    <button type="submit"><i class="fas fa-trash-alt"></i></button>
-                                </form>
-                            </li>
-                            <% }); %>
-                    </ul>
-                </div>
-                <% } else { %>
-                    <p>Pilih jenis pengguna untuk melihat daftar akun.</p>
-                    <% } %>
+                    <% } else { %>
+                        <p>Pilih jenis pengguna untuk melihat daftar akun.</p>
+                        <% } %>
+  <div class="kosong"></div>
+            </div>
+
         </div>
+
     </div>
 
 </body>
