--- a/public/css/penentuan-style.css
+++ b/public/css/penentuan-style.css
@@ -1,22 +1,29 @@
 .confirm-section {
-    margin-top: 20px;
+
     display: flex;
     justify-content: center;
 }
 
 .confirm-btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
     background-color: rgb(134, 167, 137);
-    color: white;
-    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    color: rgb(235, 243, 232);
+    padding: 12px 32px;
+    margin-top: 20px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    font-size: 12pt;
     font-weight: bold;
-    transition: background-color 0.3s ease;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 }
 
-.confirm-btn:hover {
-    background-color: darkgreen;
+.confirm-btn:active {
+    transform: translateY(2px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .kurir-button {
