--- a/views/page/admin/penentuan-kurir.ejs
+++ b/views/page/admin/penentuan-kurir.ejs
@@ -20,7 +20,7 @@
         z-index: 1;
         left: 0;
         top: 0;
-        width: 100%;
+        width: 50%;
         height: 100%;
         overflow: auto;
         background-color: rgba(0, 0, 0, 0.4);
@@ -38,7 +38,7 @@
     .close {
         color: #aaa;
         float: right;
-        font-size: 28px;
+        font-size: 16pt;
         font-weight: bold;
     }
 
@@ -48,6 +48,33 @@
         text-decoration: none;
         cursor: pointer;
     }
+
+    .list-alamat{
+        flex: 1;
+            overflow-y: auto;
+            padding: 0;
+            border: none;
+            height: 60vh;
+    }
+    .user-list::-webkit-scrollbar {
+            width: 10px;
+            height: 10px;
+        }
+
+        .user-list::-webkit-scrollbar-thumb {
+            background: rgb(134, 167, 137);
+            border: 2px solid rgb(235, 243, 232);
+            border-radius: 10px;
+        }
+
+        .user-list::-webkit-scrollbar-track {
+            background: rgb(235, 243, 232);
+            border-radius: 10px;
+        }
+
+        .user-list::-webkit-scrollbar-thumb:hover {
+            background: rgb(134, 167, 145);
+        }
 </style>
 
 <body>
@@ -58,7 +85,7 @@
             </a>
         </div>
     </div>
-    <main>
+    <div class="main" style="display: flex;">
         <div class="left-panel">
             <h1>Penentuan Kurir</h1>
             <h3>Menentukan zona pengiriman paket.</h3>
@@ -72,20 +99,25 @@
                     <option value="">-- Pilih Kelurahan --</option>
                 </select>
             </div>
-            <div class="confirm-section">
-                <button id="confirmKecamatanKelurahan" class="confirm-btn" onclick="fetchPaketByKelurahan()">Konfirmasi
-                    Zona</button>
+            <div class="confirm-section" style="justify-content: right;">
+                <button id="confirmKecamatanKelurahan" class="confirm-btn" onclick="fetchPaketByKelurahan()">Cari Alamat
+                    Sesuai Zona</button>
             </div>
-           
+
         </div>
         <div class="line-center"></div>
-        <div class="right-panel2">
-            <h3>List Pengiriman Paket</h3>
-            <div class="list-resi" id="listResi">
-                <div class="kurir-list" id="kurirList">
+        <div class="right-panel" style="height: 78vh; display: flex; flex-direction: column;
+    justify-content: space-between;">
+            <div>
+                <h3>List Pengiriman Paket</h3>
+                <div class="list-alamat">
+                    <div class="list-resi" id="listResi">
+                        <div class="kurir-list" id="kurirList">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="confirmation">
+            <div class="confirmation" style="justify-items: end;">
                 <button id="confirmButtom" class="confirm-btn" value="list-pengantaran"
                     onclick="fetchKurirByKelurahan()">Konfirmasi</button>
             </div>
@@ -96,7 +128,7 @@
                 <div id="modalContent"></div>
             </div>
         </div>
-    </main>
+    </div>
 </body>
 
 </html>
@@ -121,7 +153,7 @@
             // Event listener ketika kecamatan dipilih
             kecamatanSelect.addEventListener('change', function () {
                 // Menghapus opsi kelurahan sebelumnya
-                kelurahanSelect.innerHTML = '<option value="">--Pilih Kelurahan--</option>';
+                kelurahanSelect.innerHTML = '<option value="">-- Pilih Kelurahan --</option>';
 
                 // Mendapatkan kelurahan berdasarkan kecamatan yang dipilih
                 let kelurahans = data[this.value];
