--- a/views/page/admin/penentuan-kurir.ejs
+++ b/views/page/admin/penentuan-kurir.ejs
@@ -223,7 +223,7 @@
                 kurirList += `
                         <button class="kurir-button" onclick="selectKurir(${kurir.id_kurir})">
                             <p><b style= "color: rgb(134, 167, 145);">Nama:</b> ${kurir.nama} &nbsp;</p>
-                            <p><b style= "color: rgb(134, 167, 145);> | No. HP:</b> ${kurir.handphone}</p>
+                            <p><b style= "color: rgb(134, 167, 145);"> | No. HP:</b> ${kurir.handphone}</p>
                         </button>
                     `;
             });
