--- a/views/page/admin/penentuan-kurir.ejs
+++ b/views/page/admin/penentuan-kurir.ejs
@@ -222,8 +222,8 @@
             kurirs.forEach(kurir => {
                 kurirList += `
                         <button class="kurir-button" onclick="selectKurir(${kurir.id_kurir})">
-                            <p><b style= "color: rgb(134, 167, 145);">Nama:</b> ${kurir.nama} &nbsp;</p>
-                            <p><b style= "color: rgb(134, 167, 145);"> | No. HP:</b> ${kurir.handphone}</p>
+                            <p><b>Nama:</b> ${kurir.nama} &nbsp;</p>
+                            <p><b> | No. HP:</b> ${kurir.handphone}</p>
                         </button>
                     `;
             });
