--- a/views/page/admin/riwayat.ejs
+++ b/views/page/admin/riwayat.ejs
@@ -18,6 +18,7 @@
                 </a>
             </div>
         </div>
+        <div class="main">
         <div class="content">
             <aside class="sidebar">
                 <h1>Riwayat</h1>
@@ -63,6 +64,7 @@
             </div>
         </div>
     </div>
+</div>
     <script src="/script/main.js" type="module"></script>
 </body>
 </html>
