--- a/views/page/admin/pendaftaran-agen-karyawan.ejs
+++ b/views/page/admin/pendaftaran-agen-karyawan.ejs
@@ -28,8 +28,8 @@
       <input type="text" id="password" name="password" placeholder="Password" value="" />
       <select id="status" name="status">
         <option value="">-- Opsi Status --</option>
-        <option>agen</option>
-        <option>karyawan</option>
+        <option value="agen">agen</option>
+        <option value="karyawan">karyawan</option>
       </select>
       <button type="submit" class="green-btn">Tambah</button>
     </form>
