--- a/views/page/admin/riwayat.ejs
+++ b/views/page/admin/riwayat.ejs
@@ -37,7 +37,7 @@
             <div class="kurir-details">
                 <h3>Kurir yang mengirimkan paket</h3>
                 <div class="kurir-info">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user"></i> &nbsp;
                     <p class="kurir-name"><%= selectedKurir ? selectedKurir.nama : '' %></p>
                     <p class="kurir-phone"><%= selectedKurir ? selectedKurir.handphone : '' %></p>
                 </div>
