--- a/views/page/agen/list-paket.ejs
+++ b/views/page/agen/list-paket.ejs
@@ -30,6 +30,11 @@
     <div class="container">
       <aside class="sidebar">
         <h2>List Data Pengiriman Paket</h2>
+        <div class="total-packages">
+          Jumlah paket yang masuk: <span>
+            <%= deliveries.length %>
+          </span>
+        </div>
         <div class="package-list">
           <% deliveries.forEach(pkg=> { %>
             <div class="package-item">
